# Template3D

./: .gitignore  README.md  Template3D.sln
Template3D/: CMakeLists.txt  Template3D.vcxproj  Template3D.vcxproj.filters  main.cpp  run_debug.bat  run_release.bat  vcpkg.json
Template3D/Code/: CMakeLists.txt  main.cpp
Template3D/Code/Core/: CMakeLists.txt  simulation.hpp  simulation.inl
Template3D/Code/Core/Utilities/: handle.cpp  handle.hpp  pch.hpp
Template3D/Code/Managers/: CMakeLists.txt
Template3D/Code/Managers/Display/: CMakeLists.txt  display_manager.cpp  display_manager.hpp
Template3D/Code/Managers/Display/Common/: window_preset.hpp
Template3D/Code/Managers/Render/: CMakeLists.txt  render_manager.hpp
Template3D/Code/Managers/Render/Common/: pipeline_type.hpp  shader_type.hpp
Template3D/Code/Managers/Render/OpenGL/: CMakeLists.txt  opengl_api.cpp
Template3D/Code/Managers/Render/OpenGL/Common/: pipeline_gl.cpp  pipeline_gl.hpp  shader_gl.hpp  shader_set_gl.hpp
Template3D/Code/Managers/Render/Vulkan/: CMakeLists.txt  vulkan_api.cpp  vulkan_api.hpp
Template3D/Code/Managers/Render/Vulkan/Common/: buffer_vk.hpp  command_buffer.cpp  debug_messenger.hpp  descriptor_pool.cpp  descriptor_pool.hpp  image_vk.cpp  image_vk.hpp  logical_device.cpp  pipeline_vk.cpp  pipeline_vk.hpp  render_pass.hpp  shader_set_vk.hpp  shader_vk.hpp
Template3D/Code/Managers/Resource/: CMakeLists.txt  resource_manager.hpp
Template3D/Code/Managers/Resource/Common/: mesh.hpp
Template3D/Core/: pch.hpp  simulation.hpp  simulation.inl
Template3D/Core/Utilities/: handle.cpp  handle.hpp  types.hpp
Template3D/Managers/Display/: display_manager.cpp  display_manager.hpp
Template3D/Managers/Display/Common/: hint.hpp
Template3D/Managers/Render/: render_manager.hpp
Template3D/Managers/Render/Common/: graphics_api_concept.hpp
Template3D/Managers/Render/OpenGL/: opengl_api.cpp  opengl_api.hpp
Template3D/Managers/Render/OpenGL/Common/: shader_gl.cpp  shader_gl.hpp
Template3D/Managers/Render/Vulkan/: vulkan_api.cpp  vulkan_api.hpp
Template3D/Managers/Render/Vulkan/Common/: buffer.cpp  buffer.hpp  buffer_vk.cpp  command_buffer.cpp  command_buffer.hpp  debug_messenger.cpp  debug_messenger.hpp  descriptor_pool.cpp  descriptor_pool.hpp  image.cpp  image.hpp  logical_device.cpp  logical_device.hpp  physical_device.cpp  physical_device.hpp  pipeline_vk.cpp  pipeline_vk.hpp  render_pass.cpp  render_pass.hpp  shader_set_vk.hpp  shader_vk.cpp  shader_vk.hpp  swapchain.cpp  swapchain.hpp
Template3D/Managers/Resource/: resource_manager.cpp  resource_manager.hpp  resource_manager.inl
Template3D/Managers/Resource/Common/: color.cpp  color.hpp  handle.cpp  handle.hpp  material.hpp  mesh.hpp  model.hpp  texture.hpp  vertex.hpp
